--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,22 @@
             <version>2.3.8</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.netease.cns.proton</groupId>
+            <artifactId>proton-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <!--We incorporate openflowj for lots of conversion tool for mac/ip address. -->
+        <dependency>
+            <groupId>org.projectfloodlight</groupId>
+            <artifactId>openflowj</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
